Preparación del Reporte1

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,7 @@ dmypy.json
 cython_debug/
 /dataset/*
 /datasets/*
+nlppen.zip
+nlppen/extraccion/utils/__pycache__/__init__.cpython-39.pyc
+nlppen/extraccion/utils/__pycache__/spacy_entities.cpython-39.pyc
+nlppen/extraccion/utils/__pycache__/Txt2Numbers.cpython-39.pyc
